--- a/src/sass/styles.css
+++ b/src/sass/styles.css
@@ -92,10 +92,14 @@ box-shadow: 0px 2px 6px 0px rgba(2, 56, 16, 0.68);
 }
 
 .info {
+    display: flex;
     padding: 10px;
+    justify-content: space-evenly ;
 }
 
 .info-item {
+    display: flex;
+    flex-direction: column;
     margin: 0 5px 0 0;
 }
 
